tests/lean/holeErrors.lean.expected.out
holeErrors.lean:3:10: error: don't know how to synthesize implicit argument
  @id ?m
context:
⊢ Sort u_1
holeErrors.lean:3:7: error: failed to infer definition type
holeErrors.lean:5:9: error: failed to infer definition type
holeErrors.lean:8:9: error: don't know how to synthesize implicit argument
  @id ?m
context:
⊢ Sort u_1
holeErrors.lean:8:4: error: failed to infer 'let' declaration type
holeErrors.lean:7:7: error: failed to infer definition type
holeErrors.lean:11:11: error: failed to infer definition type
holeErrors.lean:11:7: error: failed to infer binder type
holeErrors.lean:13:15: error: failed to infer definition type
holeErrors.lean:13:12: error: failed to infer binder type
holeErrors.lean:16:4: error: failed to infer binder type
holeErrors.lean:15:7: error: failed to infer definition type
holeErrors.lean:19:13: error: don't know how to synthesize implicit argument
  @id ?m
context:
x : ?m → ?m
⊢ Sort u_1
holeErrors.lean:19:8: error: failed to infer 'let rec' declaration type
